--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     <div class="vault-header">Letter Box</div>
     <div class="vault-content">
       <div class="file-icon">17/05/25</div>
-      <div class="attachment-icon">17/05/25</div>
       <div class="file-icon">18/05/25</div>
-      <div class="file-icon">19/05/25</div?
+      <div class="file-icon">19/05/25</div>
     </div>
     <button class="close-btn" onclick="document.getElementById('vault-modal').style.display='none'">Close</button>
   </div>
@@ -59,13 +58,6 @@
     </div>
     <button class="close-letter-btn" onclick="closeLetter()">Close</button>
   </div>
-
-  <div id="attachment-viewer" class="attachment-viewer">
-  <div class="attachment-content" id="attachment-content">
-    <!-- Media gets injected here -->
-  </div>
-  <button class="close-attachment-btn" onclick="closeAttachment()">Close</button>
-</div>
 
   <script src="script.js"></script>
 
